# capsnet-panthro

./: CMakeLists.txt  README.md  digicaps.cpp  digicaps.h  main.cpp  mnist.cpp  mnist.h  primarycaps.cpp  primarycaps.h  reconstruct.cpp  reconstruct.h
data/: decode_weights1.txt  kernels.txt  w0.txt  w1.txt  w2.txt  w3.txt  w4.txt  w5.txt  w6.txt  w7.txt  w8.txt  w9.txt
